# apollo

./: .gitignore  Cargo.toml  README.md  a.out  a.txt  apollo  apollo-mode.el  apollo.asm  asm.apo  aux  iftest.apo  main  main.apo  main.noir  new.apo  noir  noir.c  noir.s  out  out.txt  package-lock.json  package.json  print.apo  shell.nix  spec.pest  t.apo  test  test.c  test.json  vgcore.1003544  vgcore.1004346  vgcore.1006647  vgcore.1007014  vgcore.1007095  vgcore.1007256  vgcore.1007374
.idx/: dev.nix
core/: Bool.apo  Char.apo  Numbers.apo  Option.apo  String.apo
examples/functions/: main.apo  out
examples/namespaces/: main.apo
examples/traits/: main.apo
libs/: array.apo
libs/algorithms/: fibonnaci.apo
libs/collections/: vector.apo
libs/fs/: fs.apo
libs/http/: parser.apo  server.apo
libs/json/: json.apo
libs/mem/: allocations.apo
libs/net/tcp/: server.apo
libs/raylib/: raylib.apo
libs/sockets/: sockets.apo
libs/stdin/: stdin.apo
libs/stdio/: stdin.apo  stdout.apo
libs/strings/: conv.apo  strings.apo
libs/sys/: conv.apo  syscalls.apo
libs/threads/: threads.apo
libs/traits/: iterable.apo
macros/: Panic.apo
src/: main.rs  modules.rs
src/modules/: ast_context.rs  ast_visitor.rs  gcc.rs  memory.rs  parser.rs  structs.rs
