[package]
name = "noir"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"
gccjit = "2.0.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
